<resources>
    <string name="app_name">CustomViewLibrary</string>

    <string name="lbl_msj_ingreso">Debe ingresar su usuario y constraseña</string>
    <string name="lbl_usuario">USUARIO</string>
    <string name="lbl_password">CONTRASEÑA</string>
    <string name="lbl_ver_pass">Ver Contraseña</string>
    <string name="lbl_olv_pass"><u>Olvide mi contraseña</u></string>
    <string name="lbl_ingresar">INGRESAR</string>
    <string name="lbl_text_vacio">Debe ingresar un usuario valido</string>
    <string name="lbl_valid_email">Debe ingresar un correo electronico valido</string>
    <string name="lbl_pass_vacio">Debe ingresar una constraseña valida</string>

    <string name="msj_toast_err_login">Usuario o Contraseña incorrecto</string>

    <string name="telefonia_sufijos">Elija sufijo</string>
    <string-array name="telefonia_sufijo_arrays">
        <item>098</item>
        <item>097</item>
        <item>096</item>
        <item>099</item>
    </string-array>

    <string-array name="numero_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>
